--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
     
     <!-- Link to our JavaScript file -->
-    <script src="surgical-pathways.js"></script>
+    <script src="global.js"></script>
 </body>
 </html>
