--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         
         <div class="step-indicator">
-            <div class="step active">1<div class="step-line"></div></div>
+            <div class="step">1<div class="step-line"></div></div>
             <div class="step">2<div class="step-line"></div></div>
             <div class="step">3</div>
         </div>
