buttons on step numbers

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         
         <div class="step-indicator">
-            <div class="step">1<div class="step-line"></div></div>
-            <div class="step">2<div class="step-line"></div></div>
-            <div class="step">3</div>
+            <button class="step">1<div class="step-line"></div></button>
+            <button class="step">2<div class="step-line"></div></button>
+            <button class="step">3</button>
         </div>
         
         <div class="controls">
