--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surgical Pathways Sankey Diagram</title>
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="global.js"></script>
 </head>
 <body>
     <div class="container">
@@ -43,8 +44,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-sankey/0.12.3/d3-sankey.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
-    
-    <!-- Link to our JavaScript file -->
-    <script src="global.js"></script>
 </body>
 </html>
