--- a/writeup.html
+++ b/writeup.html
@@ -8,7 +8,8 @@
     <script type="module" src="global.js"></script>
 </head>
 <body>
-    <h1>1. What have you done so far?</h1>
+    <h1>Final Project Prototype Writeup</h1>
+    <h2>1. What have you done so far?</h2>
     <p>
         We decided to make a simplified Sankey diagram for our prototype with only three layers: 
         Department → Approach → Outcome. We have split the diagram into 3 animated steps showing 
@@ -18,7 +19,7 @@
         they are looking at when they hover over a specific section.  
     </p>
 
-    <h1>2. What will be the most challenging of your project to design and why?</h1>
+    <h2>2. What will be the most challenging of your project to design and why?</h2>
     <p>
         For our final visualization we will have more than these three layers, but we wanted to 
         ensure our planned interactive features worked for the prototype first. In the future, 
