--- a/writeup.html
+++ b/writeup.html
@@ -11,25 +11,28 @@
     <h1>Final Project Prototype Writeup</h1>
     <h2>1. What have you done so far?</h2>
     <p>
-        We decided to make a simplified Sankey diagram for our prototype with only three layers: 
-        Department → Approach → Outcome. We have split the diagram into 3 animated steps showing 
-        each pathway a patient can take depending on these three steps. For interactivity, users 
+        We first had to clean the data and decide what parts of the data to use. Since we are interested 
+        in specific details about patient cases, we decided to use the cases.txt file for our visualization.
+        This has information on things such as gender, age, diagnosis, operation type and much more. We 
+        decided to make a simplified Sankey diagram for our prototype with only three layers: 
+        Department → Approach → Outcome. We have split the diagram into 3 animated steps showing
+        each pathway a patient can take depending on these three steps. For interactivity, users
         have the option to watch the entire animation branch out, or to click through each step 
-        to see how each path splits. We have also included a tooltip that tells users what branch 
-        they are looking at when they hover over a specific section.  
+        to see how each path splits. We have also included a tooltip that tells users what branch
+        they are looking at when they hover over a specific section.   
     </p>
 
     <h2>2. What will be the most challenging of your project to design and why?</h2>
     <p>
-        For our final visualization we will have more than these three layers, but we wanted to 
-        ensure our planned interactive features worked for the prototype first. In the future, 
-        we plan to add a way for users to see different segments of the Sankey diagram in more 
-        detail. The biggest challenge we face is integrating all of this detail in a way that is
-        easy for our users to follow. The amount of branches in the Sankey diagram, when combined
-        with the animation, makes a lot of visual noise for the viewer. We are exploring ways to
-        provide visual clarity without sacrificing detail and understanding. We are thinking about
-        addressing these challenges with a contextual paragraph and splitting up the diagram into
-        multiple interactive visualizations. 
+        For our final visualization we will have more than these three layers, but we wanted to ensure
+        our planned interactive features worked for the prototype first. In the future, we plan to add
+        a way for users to see different segments of the Sankey diagram in more detail. The biggest 
+        challenge we face is integrating all of this detail in a way that is easy for our users to follow.
+        This is challenging because the amount of branches in the Sankey diagram, when combined with the
+        animation, makes a lot of visual noise for the viewer. We are exploring ways to provide visual
+        clarity without sacrificing detail and understanding. We are thinking about addressing these
+        challenges with a contextual paragraph and splitting up the diagram into multiple interactive
+        visualizations. 
     </p>
 </body>
 </html>
