--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
         
         <div id="chart"></div>
         
-        <div class="info-box">
-            <strong>How to interact:</strong>
-            <ul>
-                <li>Hover over connections to see the patient flow</li>
-                <li>Click on a node to filter the diagram and focus on that pathway</li>
-                <li>Use the animation controls to see the diagram build step by step</li>
-                <li>Use the Reset button to clear any filters and return to the full view</li>
-            </ul>
+        <div class="flex-container">
+            <div class="info-box">
+                <strong>How to interact:</strong>
+                <ul>
+                    <li>Hover over connections to see the patient flow</li>
+                    <li>Click on a node to filter the diagram and focus on that pathway</li>
+                    <li>Use the animation controls to see the diagram build step by step</li>
+                    <li>Use the Reset button to clear any filters and return to the full view</li>
+                </ul>
+            </div>
+            <div class="legend-container"></div>
         </div>
     </div>
 
