changes to writeup

--- a/writeup.html
+++ b/writeup.html
@@ -34,5 +34,17 @@
         challenges with a contextual paragraph and splitting up the diagram into multiple interactive
         visualizations. 
     </p>
+
+    <h1>Project Context</h1>
+    
+    
+    <p>We wanted to answer the question: “What will happen when you go into surgery?” To answer this question, we investigated data from patients undergoing surgery at the Seoul National University Hospital, Republic of Korea. 
+        The visualization is meant to illustrate the most likely scenarios when going into surgery: which department patients go into, what kind of surgery they undergo, 
+        and the outcomes of each surgery. 
+    </p>
+
+
+
+
 </body>
 </html>
