--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <title>Surgical Pathways Sankey Diagram</title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="global.js"></script>
+    <script type="module" src="departments.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h1>Surgical Pathways and Outcomes</h1>
+    <h1>How long will a patient stay in the hospital to recover from surgery?</h1>
         <div class="description">
             This interactive visualization shows the journey of surgical patients from their initial department through different surgical approaches to their ultimate outcomes, revealing patterns in how different surgical pathways affect patient recovery.
+        </div>
+    <div class="container">
+        <div class="container" id="departments_vis">
+            <button id="backButton" style="display: none;">Back to Main Visualization</button>
+            <div id="barchart"></div>
+            <div id="legend"></div>
+            <div id="tooltip"></div>
         </div>
         
         <div class="step-indicator">
