Minor text changes

--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
     <script type="module" src="departments.js"></script>
 </head>
 <body>
-    <h1>How long will a patient stay in the hospital to recover from surgery?</h1>
-    <div class="description">
-        This interactive visualization shows the journey of surgical patients from their initial department through different surgical approaches to their ultimate outcomes, revealing patterns in how different surgical pathways affect patient recovery.
-    </div>
+    <h1>How long will a patient stay in the hospital to recover from surgery?</h1>   
     
     <!-- The questionnaire section will be dynamically created by question.js -->
     
+    <!-- The interactive barchart will be created by departments.js -->
     <div class="container" id="departments_vis">
         <button id="backButton" style="display: none;">Back to Main Visualization</button>
         <div id="barchart"></div>
