Added images, tooltip

--- a/index.html
+++ b/index.html
@@ -19,15 +19,32 @@
             <p>To help alleviate these concerns, we investigated data from patients undergoing surgery at the Seoul National University Hospital, Republic of Korea.</p>
         </div>
     </div>
-
-    <!-- Flex container for the two sections -->
-    <div class="content-container">
-        <!-- Container for the questionnaire section -->
-        <div class="questionnaire-section">
-            <div id="questionnaire-container"></div>
+    
+    <!-- <div class="image-container">
+        <img src="./images/digestive.avif" alt="The digestive system, addressed in the general surgery department">
+        <img src="./images/gynecology_white.jpg" alt="The female reproductive system, addressed in gynecology surgery department">
+        <img src="./images/thoracic.jpg" alt="The thoracic system, addressed in the thoracic surgery department">
+        <img src="./images/urology.jpg" alt="The urinary system, addressed in the urology surgery department">
+    </div> -->
+    <div class="image-container">
+        <div class="image-wrapper">
+            <img src="./images/digestive.avif" alt="The digestive system, addressed in the general surgery department">
         </div>
-    </div>
+        <div class="image-wrapper">
+            <img src="./images/gynecology_white.jpg" alt="The female reproductive system, addressed in gynecology surgery department">
+        </div>
+        <div class="image-wrapper">
+            <img src="./images/thoracic.jpg" alt="The thoracic system, addressed in the thoracic surgery department">
+        </div>
+        <div class="image-wrapper">
+            <img src="./images/urology.jpg" alt="The urinary system, addressed in the urology surgery department">
+        </div>
+    </div>    
 
+    <!-- Container for the questionnaire section -->
+    <div class="questionnaire-section">
+        <div id="questionnaire-container"></div>
+    </div>
     
     <!-- The interactive barchart will be created by departments.js -->
     <div class="container" id="departments_vis">
