--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <!-- The first set of images -->
-    <div class="image-container">
+    <div class="image-container-departments">
         <div class="image-wrapper">
             <img src="./images/digestive.avif" alt="Organs treated in General Surgery" title="The digestive system, addressed in the general surgery department">
         </div>
@@ -43,7 +43,7 @@
     </div>
 
      <!-- The second set of images -->
-     <div class="image-container">
+     <div class="image-container-surgery-types">
         <div class="image-wrapper">
             <img src="./images/open_surgery.jpg" alt="Open Surgery" title="Open surgery being performed on a patient">
         </div>
