Added surgery descriptions, updated writeup formatting

--- a/index.html
+++ b/index.html
@@ -20,6 +20,76 @@
         </div>
     </div>
 
+    <!-- Text info for surgical departments -->
+    <div class="surgery-departments-container">
+        <h1>Surgical Departments</h1>
+        <p>At the Seoul National University Hospital, surgeries fall under 4 general categories:</p>
+        
+        <h2 class="collapse">
+            <span class="toggle-indicator">&#9656;</span> General Surgery
+        </h2>
+        <div class="content">
+            <p>Most surgeries fall under this department. General surgery covers, but is not limited to:</p>
+            <ul>
+                <li class="emphasis">Head and Neck</li>
+                <li class="emphasis">Digestive System</li>
+                <li class="emphasis">Abdomen & Internal Organs</li>
+                <li class="emphasis">Breast, Skin, and Soft Tissue</li>
+                <li class="emphasis">Blood Vessels</li>
+                <li class="emphasis">Hormonal Glands</li>
+                <li class="emphasis">Cancer Surgery</li>
+                <li class="emphasis">Trauma Care</li>
+                <li class="emphasis">Emergency and ICU Care</li>
+            </ul>
+        </div>
+
+        <h2 class="collapse">
+            <span class="toggle-indicator">&#9656;</span> Gynecology
+        </h2>
+        <div class="content">
+            <p>This department covers surgeries related to the female reproductive system. This includes:</p>
+            <ul>
+                <li class="emphasis">Uterus</li>
+                <li class="emphasis">Ovaries</li>
+                <li class="emphasis">Cervix</li>
+                <li class="emphasis">Fallopian Tubes</li>
+                <li class="emphasis">Vagina and Vulva</li>
+            </ul>
+        </div>
+
+        <h2 class="collapse">
+            <span class="toggle-indicator">&#9656;</span> Thoracic
+        </h2>
+        <div class="content">
+            <p>This department specializes in surgeries involving the chest organs, including:</p>
+            <ul>
+                <li class="emphasis">Heart</li>
+                <li class="emphasis">Lungs</li>
+                <li class="emphasis">Esophagus</li>
+                <li class="emphasis">Trachea</li>
+            </ul>
+        </div>
+
+        <h2 class="collapse">
+            <span class="toggle-indicator">&#9656;</span> Urological
+        </h2>
+        <div class="content">
+            <p>
+                This department addresses two major fields: the urinary tract and the male reproductive system. Organs that may be operated on include, but are not limited to:
+            </p>
+            <ul>
+                <li class="emphasis">Kidneys</li>
+                <li class="emphasis">Ureters</li>
+                <li class="emphasis">Bladder and Urethra</li>
+                <li class="emphasis">Penis</li>
+                <li class="emphasis">Testes</li>
+                <li class="emphasis">Scrotum</li>
+                <li class="emphasis">Prostate</li>
+            </ul>
+        </div>
+    </div>
+
+
     <!-- The first set of images -->
     <div class="image-container-departments">
         <div class="image-wrapper">
