--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@
         <div id="questionnaire-container"></div>
     </div>
 
+    <div class="info-container">
+        <h1>Surgery Types</h1>
+        <div class="description">
+            <p><b>Open Surgery:</b> Traditional surgical technique requiring larger incisions to access the surgical site directly. Provides the surgeon with a full view of the anatomy and direct manual access to organs. Typically associated with longer recovery times but remains essential for complex procedures.</p>
+            <p><b>Videoscopic Surgery:</b> Minimally invasive approach using small incisions through which cameras and specialized instruments are inserted. The surgeon operates while viewing the surgical site on video monitors. Results in reduced post-operative pain and faster recovery compared to open techniques.</p>
+            <p><b>Robotic Surgery:</b> Advanced surgical system where surgeons control robotic arms from a console. Offers enhanced precision, 3D visualization, and greater range of motion than human hands. Benefits include smaller incisions, reduced blood loss, and typically shorter hospital stays.</p>
+        </div>
+    </div>
+
      <!-- The second set of images -->
      <div class="image-container-surgery-types">
         <div class="image-wrapper">
@@ -125,7 +134,7 @@
     </div>
 
     <!-- Info block for Sankey Diagram -->
-    <div class="sankey-info-container">
+    <div class="info-container">
         <h1>Putting it all together</h1>
         <div class="description">
             <p>Take a step back to see how different surgical departments compare.</p>
