--- a/index.html
+++ b/index.html
@@ -147,8 +147,18 @@
             
             <!-- <p>The diagram depicts the flow from the surgical departments into operation types (open, videoscopic, robotic), and then the outcomes.</p> -->
         </div>
-        <h2>Different Ways to Interact</h2>
-        <h2 class="collapse">
+        <div class="description">
+            <h2>Different Ways to Interact</h2>
+            <ul>
+                <li class="detail">You can hover over connections to see detailed patient flow statistics, or click on specific nodes to filter the diagram and focus on particular pathways.</li>
+                <li class="detail">The width of each flow represents the volume of patients following that particular pathway.</li>
+                <li class="detail">You can click on a node to filter the diagram and focus on that pathway.</li>
+                <li class="detail">Use the animation controls below to see how the diagram builds step by step, revealing patterns in surgical outcomes across departments and approaches.</li>                  
+                <li class="detail">You can use the Reset View button to clear any filters and return to the diagram to its beginning state.</p>
+            </ul>
+        </div>
+        
+        <!-- <h2 class="collapse">
             <span class="toggle-indicator">&#9656;</span> Hovering
         </h2>
         <div class="content">
@@ -177,7 +187,7 @@
         </h2>
         <div class="content">
             <p class="detail">You can use the Reset View button to clear any filters and return to the diagram to its beginning state.</p>
-        </div>
+        </div> -->
     </div>
 
     <!-- The interactive features for the Sankey Diagram -->
