Minor text update

--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
     <!-- The first set of images -->
     <div class="image-container-departments">
         <div class="image-wrapper">
-            <img src="./images/digestive.avif" alt="Organs treated in General Surgery" title="The digestive system, addressed in the general surgery department">
+            <img src="./images/digestive.avif" alt="General Surgery" title="The digestive system, addressed in the general surgery department">
         </div>
         <div class="image-wrapper">
-            <img src="./images/gynecology_white.jpg" alt="Organs treated in Gynecological Surgery" title="The female reproductive system, addressed in gynecology surgery department">
+            <img src="./images/gynecology_white.jpg" alt="Gynecological Surgery" title="The female reproductive system, addressed in gynecology surgery department">
         </div>
         <div class="image-wrapper">
-            <img src="./images/thoracic.jpg" alt="Organs treated in Thoracic Surgery" title="The thoracic system, addressed in the thoracic surgery department">
+            <img src="./images/thoracic.jpg" alt="Thoracic Surgery" title="The thoracic system, addressed in the thoracic surgery department">
         </div>
         <div class="image-wrapper">
-            <img src="./images/urology.jpg" alt="Organs treated in Urology Surgery" title="The urinary system, addressed in the urology surgery department">
+            <img src="./images/urology.jpg" alt="Urology Surgery" title="The urinary system, addressed in the urology surgery department">
         </div>
     </div>
 
@@ -157,53 +157,10 @@
                 <li class="detail">You can use the Reset View button to clear any filters and return to the diagram to its beginning state.</p>
             </ul>
         </div>
-        <!-- <h2 class="collapse">
-            <span class="toggle-indicator">&#9656;</span> Hovering
-        </h2>
-        <div class="content">
-            <p class="detail">You can hover over connections to see detailed patient flow statistics, or click on specific nodes to filter the diagram and focus on particular pathways.</p>
-        </div>
-        <h2 class="collapse">
-            <span class="toggle-indicator">&#9656;</span> Path Width
-        </h2>
-        <div class="content">
-            <p class="detail">The width of each flow represents the volume of patients following that particular pathway.</p>            
-        </div>
-        <h2 class="collapse">
-            <span class="toggle-indicator">&#9656;</span> Clicking On Nodes
-        </h2>
-        <div class="content">
-            <p class="detail">You can click on a node to filter the diagram and focus on that pathway.</p>            
-        </div>
-        <h2 class="collapse">
-            <span class="toggle-indicator">&#9656;</span> Animation Controls
-        </h2>
-        <div class="content">
-            <p class="detail">Use the animation controls below to see how the diagram builds step by step, revealing patterns in surgical outcomes across departments and approaches.</p>
-        </div>
-        <h2 class="collapse">
-            <span class="toggle-indicator">&#9656;</span> Reset View
-        </h2>
-        <div class="content">
-            <p class="detail">You can use the Reset View button to clear any filters and return to the diagram to its beginning state.</p>
-        </div> -->
     </div>
 
     <!-- The interactive features for the Sankey Diagram -->
     <div class="container">
-        <div class="flex-container">
-            <!-- "How to interact" might be useless, commenting out for now -->
-            <!-- <div class="info-box">
-                <strong>How to interact:</strong>
-                <ul>
-                    <li>Hover over connections to see the patient flow</li>
-                    <li>Click on a node to filter the diagram and focus on that pathway</li>
-                    <li>Use the animation controls to see the diagram build step by step</li>
-                    <li>Use the Reset button to clear any filters and return to the full view</li>
-                </ul>
-            </div> -->
-        </div>
-
         <div class="step-indicator">
             <button class="step sankey-step">1<div class="step-line"></div></button>
             <button class="step sankey-step">2<div class="step-line"></div></button>
