Minor text edits

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <img src="./images/digestive.avif" alt="General Surgery" title="The digestive system, addressed in the general surgery department">
         </div>
         <div class="image-wrapper">
-            <img src="./images/gynecology_white.jpg" alt="Gynecological Surgery" title="The female reproductive system, addressed in gynecology surgery department">
+            <img src="./images/gynecology_white.jpg" alt="Gynecology Surgery" title="The female reproductive system, addressed in gynecology surgery department">
         </div>
         <div class="image-wrapper">
             <img src="./images/thoracic.jpg" alt="Thoracic Surgery" title="The thoracic system, addressed in the thoracic surgery department">
@@ -114,6 +114,7 @@
     <div class="info-container">
         <h1>Surgery Types</h1>
         <div class="description">
+            <p>There are three broad categories of surgical procedures that are performed:</p>
             <p><b>Open Surgery:</b> Traditional surgical technique requiring larger incisions to access the surgical site directly. Provides the surgeon with a full view of the anatomy and direct manual access to organs. Typically associated with longer recovery times but remains essential for complex procedures.</p>
             <p><b>Videoscopic Surgery:</b> Minimally invasive approach using small incisions through which cameras and specialized instruments are inserted. The surgeon operates while viewing the surgical site on video monitors. Results in reduced post-operative pain and faster recovery compared to open techniques.</p>
             <p><b>Robotic Surgery:</b> Advanced surgical system where surgeons control robotic arms from a console. Offers enhanced precision, 3D visualization, and greater range of motion than human hands. Benefits include smaller incisions, reduced blood loss, and typically shorter hospital stays.</p>
