--- a/writeup.html
+++ b/writeup.html
@@ -11,7 +11,7 @@
     <div class="info-container">
         <h1>Project Context</h1>    
         <div class="description">
-            <p>WWhat if we could predict how long a patient will stay in the hospital based on their surgery and department? </p>
+            <p>What if we could predict how long a patient will stay in the hospital based on their surgery and department? </p>
             <p>By visualizing recovery times across departments and surgery types, this project uncovers patterns in patient outcomes, helping hospitals optimize care, allocate resources efficiently, and improve recovery experiences.</p>
             <p>Through data-driven insights, we can bridge the gap between medical procedures and patient recovery expectations.</p>
         </div>
