--- a/index.html
+++ b/index.html
@@ -181,6 +181,13 @@
         </div>
         
     </div>
+    <div class="info-container">
+        <h1>Key Takeaways</h1>    
+        <div class="description">
+            <p>An interesting takeaway is that robotic surgery is among the lowest across departments, as seen in the robotic pathway of our visualization.</p>
+            <p>One thing everyone should learn is the different recovery periods within each surgery type in departments and the flow of the diagram is what helps the visualization succeed in explaining it.</p>
+        </div>
+    </div>
 
     <!-- External scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
