--- a/writeup.html
+++ b/writeup.html
@@ -41,8 +41,10 @@
     <div class="info-container">
         <h1>Key Takeaways</h1>    
         <div class="description">
-            <p>An interesting takeaway is that robotic surgery is among the lowest across departments, as seen in the robotic pathway of our visualization.</p>
-            <p>One thing everyone should learn is the different recovery periods within each surgery type in departments and the flow of the diagram is what helps the visualization succeed in explaining it.</p>
+            <p>1. Robotic surgery is among the lowest across departments, as seen in the robotic pathway of our visualization and most patients have a recovery time of less than 3 days</p>
+            <p>2. One thing everyone should learn is the different recovery periods within each surgery type in departments and the flow of the diagram is what helps the Sankey Diagram succeed in explaining it.</p>
+            <p>3. Another key takeaway from the Sankey Diagram is that across all departments and surgery types, the death category has the least amount of patients</p>
+            <p>4. Across the departments most surgery types have the most patients with a recovery persiod of 3-7 days.</p>
         </div>
     </div>
 </body>
