Minor text changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Text info for surgical departments -->
     <div class="surgery-departments-container">
         <h1>Surgical Departments</h1>
-        <p>At the Seoul National University Hospital, surgeries fall under 4 general categories:</p>
+        <p>At the Seoul National University Hospital, surgeries fall under four general categories:</p>
         
         <h2 class="collapse">
             <span class="toggle-indicator">&#9656;</span> General Surgery
@@ -184,10 +184,11 @@
     <div class="info-container">
         <h1>Key Takeaways</h1>    
         <div class="description">
-            <p>1. Robotic surgery is among the lowest across departments, as seen in the robotic pathway of our visualization and most patients have a recovery time of less than 3 days</p>
-            <p>2. One thing everyone should learn is the different recovery periods within each surgery type in departments and the flow of the diagram is what helps the Sankey Diagram succeed in explaining it.</p>
-            <p>3. Another key takeaway from the Sankey Diagram is that across all departments and surgery types, the death category has the least amount of patients</p>
-            <p>4. Across the departments most surgery types have the most patients with a recovery persiod of 3-7 days.</p>
+            <p>From this visualization, everyone should learn the different recovery periods within each surgery type in departments and the flow of the diagram is what helps the Sankey Diagram succeed in explaining it.</p>
+            <p>Here are three key takeaways:</p>
+            <p>1. Robotic surgery is among the lowest across departments, as seen in the robotic pathway of our visualization and most patients have a recovery time of less than 3 days.</p>
+            <p>2. Another key takeaway from the Sankey Diagram is that across all departments and surgery types, the death category has the least amount of patients.</p>
+            <p>3. Across the departments most surgery types have the most patients with a recovery persiod of 3-7 days.</p>
         </div>
     </div>
 
